--- a/portal/src/app/Administrador/panel-admin/panel-admin.component.html
+++ b/portal/src/app/Administrador/panel-admin/panel-admin.component.html
@@ -1,1 +1,15 @@
-<p>panel-admin works!</p>
+<body>
+  <section class="header">
+    <app-header-admin></app-header-admin>
+  </section>
+  <section class="contenedor">
+    <section class="registros">
+      <svg xmlns="http://www.w3.org/2000/svg" width="150" height="150" viewBox="0 0 20 20"><path fill="#0284c7" d="M10 2v4.5A1.5 1.5 0 0 0 11.5 8H16v8.5a1.5 1.5 0 0 1-1.5 1.5h-4c.306-.425.5-.927.5-1.5l.001-3.947l.001-2.247l-.009.008c-.104-1.421-1.389-2.363-2.645-2.83a7.508 7.508 0 0 0-1.293-.349A8.86 8.86 0 0 0 5.5 7c-.515 0-1.02.043-1.5.126V3.5A1.5 1.5 0 0 1 5.5 2zm1 .25V6.5a.5.5 0 0 0 .5.5h4.25zM6.88 8.12c.4.071.777.173 1.12.3c1.206.45 2 1.213 2 2.08c0 1.38-2.015 2.5-4.5 2.5S1 11.88 1 10.5S3.015 8 5.5 8c.481 0 .945.042 1.38.12M5.5 14c1.38 0 2.679-.309 3.668-.858c.293-.163.578-.36.833-.59L10 16.5c0 1.38-2.015 2.5-4.5 2.5S1 17.88 1 16.5v-3.945c.255.23.54.425.832.588c.99.55 2.288.858 3.668.858"/></svg>
+      <button class="btn" routerLink="/administrador/tabla/todos-registros">Ver registros</button>
+    </section>
+    <section class="informacion">
+      <svg xmlns="http://www.w3.org/2000/svg" width="150" height="150" viewBox="0 0 16 16"><g fill="#0284c7"><path d="M12.5 16a3.5 3.5 0 1 0 0-7a3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0M8 1c-1.573 0-3.022.289-4.096.777C2.875 2.245 2 2.993 2 4s.875 1.755 1.904 2.223C4.978 6.711 6.427 7 8 7s3.022-.289 4.096-.777C13.125 5.755 14 5.007 14 4s-.875-1.755-1.904-2.223C11.022 1.289 9.573 1 8 1"/><path d="M2 7v-.839c.457.432 1.004.751 1.49.972C4.722 7.693 6.318 8 8 8s3.278-.307 4.51-.867c.486-.22 1.033-.54 1.49-.972V7c0 .424-.155.802-.411 1.133a4.51 4.51 0 0 0-4.815 1.843A12.31 12.31 0 0 1 8 10c-1.573 0-3.022-.289-4.096-.777C2.875 8.755 2 8.007 2 7m6.257 3.998L8 11c-1.682 0-3.278-.307-4.51-.867c-.486-.22-1.033-.54-1.49-.972V10c0 1.007.875 1.755 1.904 2.223C4.978 12.711 6.427 13 8 13h.027a4.552 4.552 0 0 1 .23-2.002m-.002 3L8 14c-1.682 0-3.278-.307-4.51-.867c-.486-.22-1.033-.54-1.49-.972V13c0 1.007.875 1.755 1.904 2.223C4.978 15.711 6.427 16 8 16c.536 0 1.058-.034 1.555-.097a4.507 4.507 0 0 1-1.3-1.905"/></g></svg>
+      <button class="btn" routerLink="/administrador/alta-informacion">Alta información</button>
+    </section>
+  </section>
+</body>
