--- a/portal/src/app/Empleado/formulario-registro/formulario-registro.component.html
+++ b/portal/src/app/Empleado/formulario-registro/formulario-registro.component.html
@@ -1,5 +1,5 @@
 
-<body>
+<body *ngIf="verFormulario">
   <section class="header">
     <app-header-empleado></app-header-empleado>
   </section>
@@ -17,18 +17,18 @@
           </div>
           <div class="col col-4 col-sm-3 col-lg-3">
             <label for="fecha" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Fecha</label>
-              <input formControlName="fecha" name="fecha" type="date" class="form-control form-control-sm" id="fecha" required>
+              <input formControlName="fecha" name="fecha" type="date" class="form-control form-control-sm" id="fecha" (change)="actualizarNumeroSemana($event)" required>
           </div>
           <div class="col col-4 col-sm-3 col-lg-3">
             <label for="semana" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Semana</label>
-              <input type="text" class="form-control form-control-sm" id="semana" disabled>
+              <input formControlName="semana" type="text" class="form-control form-control-sm" id="semana">
           </div>
         </div>
         <div class="col col-sm-12 col-md-8 col-lg-6">
           <label for="departamento" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Departamento</label>
-          <select formControlName="numerodp" name="numerodp" (change)="actualizarNoDepto()" class="form-select form-select-sm" id="departamento">
+          <select formControlName="numerodp" name="numerodp" (change)="actualizarNoDepto($event)" class="form-select form-select-sm" id="departamento">
             <option selected disabled>Seleccionar</option>
-            <option  [value]="1">1</option>
+            <option *ngFor="let departamento of departamentos"  [value]="departamento.numero">{{departamento.nombre}}</option>
           </select>
         </div>
         <div class="col col-12 col-md-4 col-lg-4" id="colMovil">
@@ -37,9 +37,9 @@
         </div>
         <div class="col col-sm-12 col-md-8 col-lg-6">
           <label for="maquina" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Máquina</label>
-            <select formControlName="codigomq" name="codigomq" (change)="actualizarCodMq()" class="form-select form-select-sm" id="maquina" >
+            <select formControlName="codigomq" name="codigomq" (change)="actualizarCodMq($event)" class="form-select form-select-sm" id="maquina" >
               <option selected disabled>Seleccionar</option>
-              <option [value]="2">2</option>
+              <option *ngFor="let maquina of maquinas" [value]="maquina.codigo">{{maquina.nombre}}</option>
             </select>
         </div>
         <div class="col col-12 col-md-4 col-lg-4" id="colMovil">
@@ -48,9 +48,9 @@
         </div>
         <div class="col col-sm-12 col-md-8 col-lg-6">
           <label for="subensamble" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Subensamble</label>
-            <select formControlName="numerop" name="numerop" (change)="actualizarNumPt()" class="form-select form-select-sm" id="subensamble" >
+            <select formControlName="numerop" name="numerop" (change)="actualizarNumPt($event)" class="form-select form-select-sm" id="subensamble" >
               <option selected disabled>Seleccionar</option>
-              <option [value]="3">3</option>
+              <option *ngFor="let parte of partes" [value]="parte.numero">{{parte.descripcion}}</option>
             </select>
         </div>
         <div class="col col-12 col-md-4 col-lg-4" id="colMovil">
@@ -71,12 +71,21 @@
         </div>
         <div class="col col-6 col-sm-3 col-lg-3">
           <label for="total" class="form-label" style="font-weight: bold; display: flex; justify-content: start;">Tot Rechazadas</label>
-            <input type="number" class="form-control form-control-sm" name="total" id="total" required name="valorInput" [value]="valorInput" disabled>
+          <input formControlName="totalrecha" type="number" class="form-control form-control-sm" id="total" required>
         </div>
         <div class="col" style="margin-top:2% ;">
-          <button class="btn btn-primary" type="submit">Registrar</button>
+          <button [disabled]="!formRegistro.valid" *ngIf="formRegistro.get('totalrecha')?.value === 0" class="btn btn-primary" type="submit">Registrar</button>
+          <button [disabled]="!formRegistro.valid" *ngIf="formRegistro.get('totalrecha')?.value !== 0" class="btn btn-primary" type="submit">Defectos</button>
         </div>
       </form>
+      <!-- Aquí mostramos los datos del formulario en formato JSON -->
+  <!--<div *ngIf="formRegistro.value" style="margin-top: 20px;">
+    <h2>Datos del formulario en formato JSON:</h2>
+    <pre>{{ formRegistro.value | json }}</pre>
+  </div>-->
     </div>
   </div>
+</body>
+<body *ngIf="verDefectos">
+  <app-agregar-defectos [datos]="datosParaComponenteHijo" [idRecuperado]="idRegistro" (registrarClicked)="manejarRegistro($event)"></app-agregar-defectos>
 </body>
