--- a/portal/src/app/altaInformacion/alta-defectos/alta-defectos.component.html
+++ b/portal/src/app/altaInformacion/alta-defectos/alta-defectos.component.html
@@ -1,1 +1,132 @@
-<p>alta-defectos works!</p>
+<body>
+  <section class="header">
+    <app-header-admin></app-header-admin>
+  </section>
+  <section class="contenedor">
+    <section class="nuevo">
+      <button (click)="nuevo()" type="button" id="btn" class="btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Nuevo Defecto</button>
+      <div class="group">
+        <svg class="icon" aria-hidden="true" viewBox="0 0 24 24"><g><path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path></g></svg>
+        <input placeholder="Buscar" type="search" class="input" [(ngModel)]="filtroBusqueda">
+      </div>
+    </section>
+    <section class="tabla-contenedor">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Código Máquina</th>
+            <th scope="col">Número Depto</th>
+            <th scope="col">Número Parte</th>
+            <th scope="col">Nombre del Defecto</th>
+            <th scope="col">Acciones</th>
+          </tr>
+        </thead>
+        <tbody class="table-group-divider">
+          <ng-container *ngIf=" filtrarDefectos().length > 0; else noResultados">
+            <tr *ngFor="let defecto of defectos of filtrarDefectos()">
+              <td>{{defecto.codigomq}}</td>
+              <td>{{defecto.numerodp}}</td>
+              <td>{{defecto.numerop}}</td>
+              <td>{{defecto.tipodefecto}}</td>
+              <td>
+                <svg (click)="editDefecto(defecto.id)" class="editar" data-bs-toggle="modal" data-bs-target="#staticBackdrop2" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24">
+                  <title>Editar</title><path fill="#eab308" d="M5 21q-.825 0-1.412-.587T3 19V5q0-.825.588-1.412T5 3h8.925l-2 2H5v14h14v-6.95l2-2V19q0 .825-.587 1.413T19 21zm4-6v-4.25l9.175-9.175q.3-.3.675-.45t.75-.15q.4 0 .763.15t.662.45L22.425 3q.275.3.425.663T23 4.4q0 .375-.137.738t-.438.662L13.25 15zM21.025 4.4l-1.4-1.4zM11 13h1.4l5.8-5.8l-.7-.7l-.725-.7L11 11.575zm6.5-6.5l-.725-.7zl.7.7z"/></svg>
+              </td>
+            </tr>
+          </ng-container>
+          <ng-template #noResultados>
+            <tr>
+              <td colspan="5" style="color: red; font-weight: bold;">Ningún resultado</td>
+            </tr>
+          </ng-template>
+        </tbody>
+      </table>
+    </section>
+  </section>
+</body>
+<!--MODAL PARA EL FORMULARIO REGISTRO DE DEFECTOS-->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Registro de defectos</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form class="row" (ngSubmit)="submit(form.value)" #form="ngForm">
+          <div class="col-md-6">
+            <label for="codmaquina" class="form-label" style="font-weight: bold;">Máquina</label>
+            <select [(ngModel)]="crearDef.codigomq" name="codigomq" class="form-select" id="codmaquina" aria-label="Default select example" required>
+              <option selected disabled>Seleccionar</option>
+              <option *ngFor="let maquina of maquinas" [value]="maquina.codigo">{{maquina.nombre}}</option>
+            </select>
+          </div>
+          <div class="col-md-6">
+            <label for="departamento" class="form-label" style="font-weight: bold;">Departamento</label>
+            <select [(ngModel)]="crearDef.numerodp" name="numerodp" class="form-select" id="departamento" aria-label="Default select example" required>
+              <option selected disabled>Seleccionar</option>
+              <option *ngFor="let departamento of departamentos" [value]="departamento.numero">{{departamento.nombre}}</option>
+            </select>
+          </div>
+          <div class="col-md-6">
+            <label for="parte" class="form-label" style="font-weight: bold;">Número de Parte</label>
+            <select [(ngModel)]="crearDef.numerop" name="numerop" class="form-select" id="parte" aria-label="Default select example" required>
+              <option selected disabled>Seleccionar</option>
+              <option *ngFor="let parte of partes" [value]="parte.numero">{{parte.descripcion}}</option>
+            </select>
+          </div>
+          <div class="col-md-6">
+            <label for="Tipo" class="form-label" style="font-weight: bold;">Nombre del Defecto</label>
+            <input [(ngModel)]="crearDef.tipodefecto" name="tipodefecto" type="text" class="form-control" id="tipo" required>
+          </div>
+          <div class="col-12">
+            <button class="btn btn-primary" [disabled]="!form.valid" type="submit">Agregar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+<!--MODAL PARA EDITAR EL DEFECTO-->
+<div class="modal fade" id="staticBackdrop2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel2" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="staticBackdropLabel">Registro de defectos</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form class="row" (ngSubmit)="submitedit(form.value)" #form="ngForm">
+          <div class="col-md-6">
+            <label for="codmaquina" class="form-label" style="font-weight: bold;">Máquina</label>
+            <select [(ngModel)]="crearDef.codigomq" name="codigomq" class="form-select" id="codmaquina" aria-label="Default select example" required>
+              <option selected disabled>Seleccionar</option>
+              <option *ngFor="let maquina of maquinas" [value]="maquina.codigo">{{maquina.nombre}}</option>
+            </select>
+          </div>
+          <div class="col-md-6">
+            <label for="departamento" class="form-label" style="font-weight: bold;">Departamento</label>
+            <select [(ngModel)]="crearDef.numerodp" name="numerodp" class="form-select" id="departamento" aria-label="Default select example" required>
+              <option selected disabled>Seleccionar</option>
+              <option *ngFor="let departamento of departamentos" [value]="departamento.numero">{{departamento.nombre}}</option>
+            </select>
+          </div>
+          <div class="col-md-6">
+            <label for="parte" class="form-label" style="font-weight: bold;">Número de Parte</label>
+            <select [(ngModel)]="crearDef.numerop" name="numerop" class="form-select" id="parte" aria-label="Default select example" required>
+              <option selected disabled>Seleccionar</option>
+              <option *ngFor="let parte of partes" [value]="parte.numero">{{parte.descripcion}}</option>
+            </select>
+          </div>
+          <div class="col-md-6">
+            <label for="Tipo" class="form-label" style="font-weight: bold;">Nombre del Defecto</label>
+            <input [(ngModel)]="crearDef.tipodefecto" name="tipodefecto" type="text" class="form-control" id="tipo" required>
+          </div>
+          <div class="col-12">
+            <button class="btn btn-warning" [disabled]="!form.valid" type="submit" data-bs-dismiss="modal">Editar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
